welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
        case _ =>
               ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if ( estFaceMur == false ){
  ^